# RetrieveServer

./: .gitignore  CMakeLists.txt  README.md
conf/: 11.txt  configure.json  configure_duc.json  rpcrun.sh  start_server.sh
data/: README.md
data/retrieve/dict/: 13_国家图书馆_f.csv  14_国家大剧院_f.csv
data/retrieve/feature/: 1.jpg.csv
script/: ReadMe.md  gendir.py  t3targetinfo.py  t4_1piccap.py  t5remotecap.py  t7dictionary.py
source/: retrieveserver.cpp  retrieveserver.h  server.cpp  server.h
source/algorithm/imgcap/: imgcap.cpp  imgcap.h
source/algorithm/retrieve/ASIFT/: compute_asift_keypoints.cpp  compute_asift_keypoints.h  compute_asift_matches.cpp  demo_lib_sift.cpp  demo_lib_sift.h  domain.cpp  extract_feature.cpp  extract_feature.h  filter.h  flimage.h  gdalio.h  library.h  orsa.cpp  orsa.h  splines.h
source/algorithm/retrieve/detect/: basicoperator.h  readcsv.h  regbygeoinf.h  sr.h
source/algorithm/retrieve/utils/: myredis.cpp  myredis.h  retrieveutils.cpp  retrieveutils.h
source/algorithm/thumb/: imagethumb.cpp  imagethumb.h
source/rpc/retrieve/: ImageRetrieveRpc.cpp  ImageRetrieveRpc.h  ImageRetrieveRpc.ice
source/threadpool/: mutex.cpp  mutex.h  task.cpp  task.h  threadpool.cpp  threadpool.h
source/utils/: pgdb.cpp  pgdb.h  utils.cpp  utils.h
